# 2D-Physics

./: .gitignore  2DPhysics.aps  2DPhysics.rc  CMakeLists.txt  LICENSE  README.md
Dependencies/: Libs
include/: Circle.h  axioms.h  polygon.h
src/: Circle.h  Sphere.cpp  axioms.h  main.cpp  polygon.h  textInfo.cpp  textInfo.h
